added colours to backgrounds, changed section id

--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
             <ul class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#Home"><a href="index.html"><span>Home</span></a>
             <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="#About the Rally""default.asp"rel=""><span>About The Rally</span></a>
+              <a class="nav-link js-scroll-trigger" href="#AbouttheRally"><a href="#AbouttheRally""default.asp"rel=""><span>About The Rally</span></a>
             </ul>
             <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Our Story""news.asp"><span>Our Story</span></a>
+              <a class="nav-link js-scroll-trigger" href="#OurStory""news.asp"><span>Our Story</span></a>
             </ul>
             <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Sponsor Us""contact.asp"><span>Sponsors</span></a>
+              <a class="nav-link js-scroll-trigger" href="#SponsorUs""contact.asp"><span>Sponsors</span></a>
             </ul>
         </div>
     </nav>
