--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <header>
   <ul>
-  <li><a href="#About the Rally""default.asp">About the Rally</a></li>
-  <li><a href="#Our Story""news.asp">Our Story</a></li>
-  <li><a href="#Sponsor Us""contact.asp">Sponsor Us</a></li>
+  <li><a href="#AbouttheRally""default.asp">About the Rally</a></li>
+  <li><a href="#OurStory""news.asp">Our Story</a></li>
+  <li><a href="#SponsorUs""contact.asp">Sponsor Us</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
 <img class="logo" src="logo.jpg">
@@ -20,9 +20,9 @@
 
   <body>
     <div
-    <section id="About the Rally">
+    <section id="AbouttheRally">
       <center>
-      <h2> About the Rally </h2>
+        <h2> About the Rally </h2>
       </center>
     <a name= "intercontinental"></a>
     <center>
@@ -37,9 +37,9 @@
       </p>
       <p> The organizers ("The Adventurists") are careful to point out that racing on highways is illegal. There are other differences from mainstream rallies, particularly the fact that no support team is provided and no other arrangements are made such as for accommodation, maintenance, or fuel. </p>
     </div>
-
+  </section>
     </div>
-      <section id="Our Story">
+      <section id="OurStory">
         <center>
         <h2> <p><strong> Our Story </strong></h2>
         </center>
@@ -54,7 +54,8 @@
         </div></center>
         <p class="subtext"> Left to right: Sophie, Alana, Annabelle, Jeanne </p>
       </center>
-    <section id="Sponsor Us">
+    </section>
+    <section id="SponsorUs">
       <center>
         <h2> <p><strong> Sponsor Us </strong></p> </h2>
       </center>
@@ -66,6 +67,7 @@
 
         <p> The money donated through our JustGiving page goes directly to the charity. </p>
       </center>
+    </section>
 </article>
 
     <div>
