fixed one of the navbar links

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
             <ul class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#Home"><a href="index.html"><span>Home</span></a>
             <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#AbouttheRally"><a href="#AbouttheRally""default.asp"rel=""><span>About The Rally</span></a>
+              <a class="nav-link js-scroll-trigger" href="#AbouttheRally"><a href="#AbouttheRally""default.asp"><span>About the Rally</span></a>
             </ul>
             <ul class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#OurStory""news.asp"><span>Our Story</span></a>
