--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 <h1><span> The Mongol Rally </span></h1>
 <h2> <span>Welcome To Our Adventure </span></p>
 </header>
-
   <body>
-    <div
+    <div>
     <section id="AbouttheRally">
       <center>
         <h2> About the Rally </h2>
