updated about section info

--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
       <ol> 3. Rally teams need to raise at least £1000 for charity </ol>
         </ol>
       </p>
-      <p> The organizers ("The Adventurists") are careful to point out that racing on highways is illegal. There are other differences from mainstream rallies, particularly the fact that no support team is provided and no other arrangements are made such as for accommodation, maintenance, or fuel. </p>
+      <p> The organizers ("The Adventurists") are careful to point out that racing on highways is illegal. There are other differences from mainstream rallies, particularly the fact that no support team is provided and no other arrangements are made such as for accommodation, maintenance, or fuel.
+      </p>
+      <p>The inaugural rally took place in 2004, in which 6 teams started and 4 completed the course. The second rally, in 2005, was entered by 43 teams, and 18 automobiles arrived intact in Ulan Bator. The 2006 Rally began on July 22 with 167 cars setting off. 117 teams made it to Ulan Bator. The Mongol Rally was run as a charity event from 2004 to 2006 with all of the proceeds from the entry fees used to organise the event with the remaining donated to charity. This changed from 2007 as the event is now organised by the League of Adventurists International Ltd, a privately owned profit making UK company. 
+      </p>
+      <p>However, the participants continue to raise money for charities through sponsorship. The 2007 rally left Hyde Park, London, on 21 July and was limited to 200 teams. Registration for 2007 was far more popular than the organisers could have foreseen, with the first 100 places allocated in 22 seconds. Due to this popularity, the final 50 places were awarded on the result of a ballot. In 2007, places were awarded for 2008 in two sign ups with places assigned on 1 November and 7 November.The entry fee was £650 per team. The main British starting point moved from Hyde Park, London, to Goodwood in West Sussex for the 2009 to 2012 events. Cars lapped the circuit in procession before departing. In 2013 the launch was from Bodiam Castle in Sussex and in 2014 it returned to London, launching from Battersea Park.
+      </p>
     </div>
   </section>
     </div>
@@ -46,10 +51,10 @@
       <center>
         <p> With Sophie’s upbeat energy, Alana’s worldly knowledge, Annabelle’s intrepid sense of adventure and Jeanne’s ability to lead us all through it, we have come together as a team. The idea is to complete the rally this Summer 2019, whilst also raising money for charity. We are looking forward to travelling 10,000 miles halfway across the world, through approximately 13 countries. It will be a steep learning curve and the biggest challenge any of us have ever taken on, but the benefits will make it all worth it! </p>
         <center><div class= "team">
-          <img src= "sophie.jpg" alt="Sophie" width="170" height="170">
-          <img src= "alana.jpg" alt="Alana" width="170" height="170">
-          <img src= "annabelle.jpg" alt="Annabelle" width="170" height="170">
-          <img src= "jeanne.jpg" alt="Jeanne" width="170" height="170">
+          <img src= "sophie.jpg" alt="Sophie" width="250" height="250">
+          <img src= "alana.jpg" alt="Alana" width="250" height="250">
+          <img src= "annabelle.jpg" alt="Annabelle" width="250" height="250">
+          <img src= "jeanne.jpg" alt="Jeanne" width="250" height="250">
         </div></center>
         <p class="subtext"> Left to right: Sophie, Alana, Annabelle, Jeanne </p>
       </center>
