--- a/index.html
+++ b/index.html
@@ -14,72 +14,76 @@
   <li><a href="contact.html">Contact</a></li>
 </ul>
 <img class="logo" src="logo.jpg">
-<h1><span> The Mongol Rally </span></h1>
-<h2> <span>Welcome To Our Adventure </span></p>
+<h1><span> Welcome To Our Adventure </span></h1>
 </header>
 
   <body>
-    <div
+    <div>
     <section id="AbouttheRally">
       <center>
-        <h2> About the Rally </h2>
+        <h2> A b o u t &nbsp; &nbsp; t h e &nbsp; &nbsp; R a l l y </h2>
       </center>
-    <a name= "intercontinental"></a>
-    <center>
-    <p> The Mongol Rally is an intercontinental car rally that begins in Europe and ends in Ulan Ude, Russia. The rally originally ended in Ulan Bator, Mongolia. However, to avoid punitive costs and taxes associated with vehicle imports and disposal, the rally now passes through Mongolia and ends in Ulan Ude. The principal launch is from Goodwood Circuit in the United Kingdom, with subsidiary starting points in the Czech Republic. </p>
-      <p> It is described as the 'Greatest Adventure in the World' and sees on average 70% completion rate. There are three fundamental Rules of the Rally: </p>
-      <p>
-        <ol class="rules">
-      <ol> 1. Rally vehicles have a 1000cc engine limit </ol>
-      <ol> 2. Rally teams are unsupported </ol>
-      <ol> 3. Rally teams need to raise at least £1000 for charity </ol>
-        </ol>
-      </p>
-      <p> The organizers ("The Adventurists") are careful to point out that racing on highways is illegal. There are other differences from mainstream rallies, particularly the fact that no support team is provided and no other arrangements are made such as for accommodation, maintenance, or fuel. </p>
+      <center>
+        <p> The Mongol Rally is an intercontinental car rally that begins in Europe and ends in Ulan Ude, Russia. The rally originally ended in Ulan Bator, Mongolia. However, to avoid punitive costs and taxes associated with vehicle imports and disposal, the rally now passes through Mongolia and ends in Ulan Ude. The principal launch is from Goodwood Circuit in the United Kingdom, with subsidiary starting points in the Czech Republic. </p>
+        <p> It is described as the 'Greatest Adventure in the World' and sees on average 70% completion rate. There are three fundamental Rules of the Rally: </p>
+      </center
+        <p>
+          <ol class="rules">
+            <ol> 1. Rally vehicles have a 1000cc engine limit </ol>
+            <ol> 2. Rally teams are unsupported </ol>
+            <ol> 3. Rally teams need to raise at least £1000 for charity </ol>
+          </ol>
+        </p>
+      <center>
+        <p> The organizers ("The Adventurists") are careful to point out that racing on highways is illegal. There are other differences from mainstream rallies, particularly the fact that no support team is provided and no other arrangements are made such as for accommodation, maintenance, or fuel. </p>
+      </center>
+    </section>
     </div>
-  </section>
-    </div>
-      <section id="OurStory">
-        <center>
-        <h2> <p><strong> Our Story </strong></h2>
-        </center>
-      <a name= "Sophie"></a>
+    <section id="OurStory">
+      <center>
+        <h3> O u r &nbsp; &nbsp; S t o r y </h3>
+      </center>
       <center>
         <p> With Sophie’s upbeat energy, Alana’s worldly knowledge, Annabelle’s intrepid sense of adventure and Jeanne’s ability to lead us all through it, we have come together as a team. The idea is to complete the rally this Summer 2019, whilst also raising money for charity. We are looking forward to travelling 10,000 miles halfway across the world, through approximately 13 countries. It will be a steep learning curve and the biggest challenge any of us have ever taken on, but the benefits will make it all worth it! </p>
-        <center><div class= "team">
+      </center>
+      <center>
+        <div class= "team">
           <img src= "sophie.jpg" alt="Sophie" width="170" height="170">
           <img src= "alana.jpg" alt="Alana" width="170" height="170">
           <img src= "annabelle.jpg" alt="Annabelle" width="170" height="170">
           <img src= "jeanne.jpg" alt="Jeanne" width="170" height="170">
-        </div></center>
+        </div>
+      </center>
+      <center>
         <p class="subtext"> Left to right: Sophie, Alana, Annabelle, Jeanne </p>
       </center>
     </section>
     <section id="SponsorUs">
       <center>
-        <h2> <p><strong> Sponsor Us </strong></p> </h2>
+        <h4> S p o n s o r &nbsp; &nbsp; U s </h4>
       </center>
-      <a name="charity"></a>
       <center>
         <p> The rally has presented us with a wonderful opportunity to give back to planet Earth. The reality of climate change is no longer up for debate. It is the most pressing challenge facing our world today with forest loss playing a major part in this, contributing to more than 12% of all CO2 emissions. Keeping rainforest standing is the simplest and cheapest way to mitigate climate change, but despite this we are destroying the world’s rainforest at a faster rate than ever. Of the world’s remaining forests: 46% are fragmented, 30% are degraded and only 24% are intact. </p>
 
         <p> Cool Earth works alongside rainforest communities to halt deforestation, and it believes the only way to halt destruction is to align the future of the rainforest with the people best placed to protect it. This means placing forest in the hands of the people who rely on its survival for their survival. Cool Earth works where the threat is greatest, with projects on the frontline of deforestation and they only work with villages that approach them, with the villages deciding how funds are spent and driving the partnership. These projects grow village by village to form a shield – protecting millions of acres of neighbouring forest. </p>
 
         <p> The money donated through our JustGiving page goes directly to the charity. </p>
+        <img src= "cool earth.jpg" alt="Cool Earth" width="180" height="50">
       </center>
     </section>
-</article>
 
-    <div>
-      <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';"><img src="facebook icon.png" alt="Facebook" height="40" width="40"</button>
-        <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';"><img src="twitter icon.png" alt="Twitter" height="40" width="40"</button>
-        <button onclick="window.location.href = 'https://www.instagram.com/codefirstgirls/';"><img src="instagram icon.png" alt="Instagram" height="40" width="40"</button></center>
-    </div>
-    <div>
+      <center>
+        <div>
+          <button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';"><img src="facebook icon.png" alt="Facebook" height="40" width="40"</button>
+          <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';"><img src="twitter icon.png" alt="Twitter" height="40" width="40"</button>
+          <button onclick="window.location.href = 'https://www.instagram.com/codefirstgirls/';"><img src="instagram icon.png" alt="Instagram" height="40" width="40"</button></center>
+        </div>
+      </center>
 
-      <div class="container1">
-      <center>CodeFirstGirls: Course Competition Spring 2019</center>
-    </div>
-
-    <script> $ ("button").on("click", function(){alert("clicked!")})</script>
+        <div class="container1">
+          <center>CodeFirstGirls: Course Competition Spring 2019</center>
+        </div>
+      <center>
+        <script> $ ("button").on("click", function(){alert("clicked!")})</script>
+      </center>
 </body>
