--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <title>Home</title>
 <head>
-  <link rel="stylesheet" type="text/css" href="css contact/stylesheetcontact.css">
+  <link rel="stylesheet" type="text/css" href="css/css contact/stylesheetcontact.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
