Seperated CSS and CSS contact

--- a/contact.html
+++ b/contact.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <title>Contact</title>
 <head>
-  <link rel="stylesheet" type="text/css" href="css/css contact/stylesheetcontact.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesheetcontact.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
   <header>
     <ul>
     <li><a href="#AbouttheRally""default.asp"> Home </a></li>
-    <li><a href="#OurStory""news.asp">About The Rally</a></li>
-    <li><a href="#SponsorUs""contact.asp">Our Story</a></li>
-    <li><a href="contact.html">Sponsor Us</a></li>
+    <li><a href="#AbouttheRally""news.asp">About The Rally</a></li>
+    <li><a href="#OurStory""contact.asp">Our Story</a></li>
+    <li><a href="#SponsorUs">Sponsor Us</a></li>
   </ul>
   <h1><span> Contact </span></h1>
   </header>
