--- a/contact.html
+++ b/contact.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Home</title>
+<title>Contact</title>
 <head>
   <link rel="stylesheet" type="text/css" href="css contact/stylesheetcontact.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-      <div class="container">
-            <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Home"><a href="index.html"><span>Home</span></a>
-            <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="index.html"><span>About The Rally</span>
-            </ul>
-            <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Our Story"><a href="index.html"><span>Our Story</span></a>
-            </ul>
-            <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Sponsors"><a href="index.html"><span>Sponsors</span></a>
-            </ul>
-        </div>
-    </nav>
+  <header>
+    <ul>
+    <li><a href="#AbouttheRally""default.asp"> Home </a></li>
+    <li><a href="#AbouttheRally""news.asp">About The Rally</a></li>
+    <li><a href="#OurStory""contact.asp">Our Story</a></li>
+    <li><a href="#SponsorUs">Sponsor Us</a></li>
+  </ul>
+  <h1><span> Contact </span></h1>
+  </header>
+</div>
 
-<header>
-    <header class="masthead">
-  <div class="container1">
-    <div class="intro-text">
-      <div class="intro-heading text-uppercase"><container1>Contact</container1></div>
-    </div>
-  </div>
-</header>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd3iCL_tOvcD8OMpyKhiixCbgXqsys_C--WQhTGaa3cBidhVw/viewform?embedded=true" width="640" height="630" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd3iCL_tOvcD8OMpyKhiixCbgXqsys_C--WQhTGaa3cBidhVw/viewform?embedded=true" center width="640" height="630" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
 
 <div>
   <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';"><img src="facebook icon.png" alt="Facebook" height="40" width="40"</button>
