changed contact page background, sorted out nav bar, made thigns neater

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <li><a href="contact.html">Contact</a></li>
 </ul>
 <img class="logo" src="logo.jpg">
-<h1><span> Welcome To Our Adventure </span></h1>
+<h1><span> Welcome To Our Adventure... </span></h1>
 </header>
     <div id="AbouttheRally">
       <center>
@@ -66,10 +66,6 @@
       </center>
 </article>
 
-    <div>
-      <center><button> Facebook </button> <button> Twitter </button> <button> Instagram </button></center>
-    </div>
-
     </div>
     <div>
 
@@ -80,12 +76,11 @@
           <button onclick="window.location.href = 'https://www.instagram.com/codefirstgirls/';"><img src="instagram icon.png" alt="Instagram" height="40" width="40"</button></center>
         </div>
       </center>
-
-        <div class="container1">
-          <center>CodeFirstGirls: Course Competition Spring 2019</center>
-        </div>
       <center>
         <script> $ ("button").on("click", function(){alert("clicked!")})</script>
       </center>
+        <div class="container1">
+          <center>CodeFirstGirls: Course Competition Spring 2019</center>
+        </div>
 </body>
 </html>
