--- a/contact.html
+++ b/contact.html
@@ -8,19 +8,18 @@
 <body>
   <header>
     <ul>
-    <li><a href="#AbouttheRally""default.asp"> Home </a></li>
-    <li><a href="#AbouttheRally""news.asp">About The Rally</a></li>
-    <li><a href="#OurStory""contact.asp">Our Story</a></li>
-    <li><a href="#SponsorUs">Sponsor Us</a></li>
+    <li><a href="index.html"> Home </a></li>
+    <li><a href="index.html#AbouttheRally">About The Rally</a></li>
+    <li><a href="index.html#OurStory">Our Story</a></li>
+    <li><a href="index.html#SponsorUs">Sponsor Us</a></li>
   </ul>
-  <h1><span> Contact </span></h1>
+  <h1>C o n t a c t &nbsp;</h1>
   </header>
 </div>
 
-
+<div class="form">
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd3iCL_tOvcD8OMpyKhiixCbgXqsys_C--WQhTGaa3cBidhVw/viewform?embedded=true" center width="640" height="630" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-
-
+</div>
 <div>
   <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';"><img src="facebook icon.png" alt="Facebook" height="40" width="40"</button>
     <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';"><img src="twitter icon.png" alt="Twitter" height="40" width="40"</button>
