--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
 <body>
   <header>
     <ul>
-    <li><a href="#AbouttheRally""default.asp"> Home </a></li>
-    <li><a href="#OurStory""news.asp">About The Rally</a></li>
-    <li><a href="#SponsorUs""contact.asp">Our Story</a></li>
+    <li><a href="index.html""#AbouttheRally""default.asp"> Home </a></li>
+    <li><a href="index.html""#OurStory""news.asp">About The Rally</a></li>
+    <li><a href="index.html""#SponsorUs""contact.asp">Our Story</a></li>
     <li><a href="contact.html">Sponsor Us</a></li>
   </ul>
   <h1><span> Contact </span></h1>
